# notf

./: .clang-format  .create_coverage_report.sh  .gitignore  .gitlab-ci.yml  .sanitizer-blacklist  CMakeLists.txt  DEPENDENCIES  README.md  ambitious_ui.pro  install_libs.sh  notf.pro  notf.sublime-project  notf.sublime-workspace  signal-ui.pro  style.txt  theplan.txt
apps/fiber/: CMakeLists.txt  fiber_main.cpp
apps/node_scratch/: CMakeLists.txt  node_scratch.cpp
apps/reactive_scratch/: CMakeLists.txt  reactive_scratch.cpp
apps/scratch/: CMakeLists.txt  dynamic_struct.cpp  ingest_test.cpp  msgpack_profile.cpp  node_scratch.cpp  reactive_operators.cpp  scratch.cpp  scratch2.cpp  scratch3.cpp  structured_buffer.cpp
benchmarks/: CMakeLists.txt
notf/: CMakeLists.txt
notf/app/: fwd.hpp  glfw_callbacks.cpp  glfw_callbacks.hpp  input.cpp  input.hpp  render_manager.cpp  render_manager.hpp  resource_manager.hpp  timer_pool.cpp
notf/common/: any.hpp  bimap.hpp  color.cpp  color.hpp  delegate.hpp  dynarray.hpp  fibers.hpp  filesystem.cpp  fwd.hpp  random.cpp  random.hpp  stream.hpp  string.hpp  thread.hpp  thread_pool.cpp  thread_pool.hpp  utf8.hpp  uuid.hpp  vector.hpp
notf/graphic/: frame_buffer.cpp  fwd.hpp  glfw.hpp  graphics_context.cpp  graphics_context.hpp  graphics_system.hpp  opengl.cpp  raw_image.cpp  raw_image.hpp  shader.cpp  shader_program.cpp  texture.hpp
notf/meta/: array.hpp  breakable_scope.hpp  concept.hpp  dll.hpp  enum.hpp  function.hpp  fwd.hpp  hash.hpp  id.hpp  integer.hpp  log.hpp  macros.hpp  numeric.hpp  pointer.hpp  real.hpp  singleton.hpp  stringtype.hpp  tuple.hpp  types.hpp
pynotf/pycnotf/: CMakeLists.txt  thirdparty
src/: CMakeLists.txt  breakout.cpp  engine_test.cpp  layout.cpp  main.cpp  nanovg_test.cpp  render_main.cpp  scratch.cpp
src/app/: README.md  animation_manager.hpp  application.cpp  application.hpp  component.cpp  driver.cpp  event_handler.cpp  event_manager.cpp  event_manager.hpp  forwards.hpp  glfw.hpp  glfw_callbacks.cpp  graph.cpp  graphics_producer.cpp  graphics_producer.hpp  ids.hpp  input.cpp  item.cpp  item.hpp  key.cpp  keyboard.cpp  layer.cpp  layer.hpp  node.cpp  node.hpp  node_container.cpp  node_container.hpp  node_handle.cpp  node_handle.hpp  node_property.cpp  node_property.hpp  object.cpp  path.cpp  path.hpp  properties.cpp  properties.hpp  properties2.cpp  properties2.hpp  property.cpp  property_batch.cpp  (+44 more)
src/breakout/: ballobject.cpp  game.cpp  gamelevel.cpp  gameobject.cpp  spriterenderer.cpp
src/cel/: stroker.cpp
src/common/: aabr.cpp  aabr.hpp  any.hpp  arithmetic.hpp  assert.hpp  bezier.cpp  bezier.hpp  circle.cpp  circle.hpp  claim.cpp  color.cpp  color.hpp  const.cpp  dag.cpp  dag.hpp  debug.cpp  enum.hpp  exception.cpp  exception.hpp  float.hpp  float_utils.cpp  forwards.hpp  half.cpp  half.hpp  hash.hpp  id.hpp  input.cpp  integer.hpp  line.cpp  line2.cpp  log.cpp  log.hpp  map.hpp  matrix3.cpp  matrix3.hpp  matrix4.cpp  matrix4.hpp  memory.hpp  meta.hpp  mnemonic.cpp  (+61 more)
src/core/: abstract_item.cpp  abstract_layout_item.cpp  abstract_layout_object.cpp  abstract_object.cpp  abstract_property.cpp  application.cpp  claim.cpp  component.cpp  controller.cpp  item.cpp  item_container.cpp  item_manager.cpp  item_new.cpp  keyboard.cpp  layout.cpp  layout_item.cpp  layout_item_manager.cpp  layout_object.cpp  layout_root.cpp  object.cpp  object_manager.cpp  properties.cpp  property.cpp  property_impl.cpp  render_manager.cpp  resource_manager.cpp  root_layout_item.cpp  screen_item.cpp  screen_item_new.cpp  shadercomponent.cpp  shapecomponent.cpp  state.cpp  texturecomponent.cpp  widget.cpp  window.cpp  window_layout.cpp  zhierarchy.cpp  znode.cpp
src/engine/: engine_test.cpp  engine_test01.cpp  engine_test02.cpp  engine_test03.cpp  engine_test04.cpp
src/examples/: example_framebuffer.cpp  example_pipeline.cpp  framebuffer_example.cpp  line_example.cpp  wireframe_example.cpp
src/graphic/: frame_buffer.cpp  gl_errors.cpp  gl_utils.cpp  graphics_context.cpp  graphics_system.cpp  index_buffer.cpp  opengl.cpp  opengl_buffer.cpp  prefab_factory.cpp  raw_image.cpp  shader.cpp  shader_program.cpp  texture.cpp  uniform_buffer.cpp  vertex_buffer.cpp  vertex_object.cpp
src/graphics/: README.md  backend_gl.cpp  blend_mode.cpp  canvas_cell.cpp  canvas_layer.cpp  canvas_painter.cpp  cell.cpp  cell_old.cpp  font.cpp  font_atlas.cpp  font_manager.cpp  forwards.hpp  frame_buffer.cpp  frame_buffer.hpp  geometry.cpp  gl_errors.cpp  gl_errors.hpp  gl_modes.hpp  gl_utils.cpp  gl_utils.hpp  graphics_context.cpp  graphics_context.hpp  graphics_manager.cpp  graphics_system.cpp  graphics_system.hpp  hud_canvas.cpp  hud_layer.cpp  hud_primitives.cpp  hud_shader.cpp  ids.hpp  index_array.cpp  index_array.hpp  index_buffer.cpp  load_shaders.cpp  mytest.cpp  paint.cpp  painter.cpp  painter_new.cpp  painter_old.cpp  pipeline.cpp  (+23 more)
src/graphics2/: backend.cpp  backend_gl.cpp  hud_canvas.cpp  hud_layer.cpp  hud_primitives.cpp  hud_shader.cpp  shader.cpp
src/meta/: half.cpp  random.cpp
src/python/: interpreter.cpp  py_aabr.cpp  py_canvascomponent.cpp  py_circle.cpp  py_claim.cpp  py_color.cpp  py_component.cpp  py_controller.cpp  py_dict_utils.cpp  py_event.cpp  py_font.cpp  py_foo.cpp  py_fwd.cpp  py_global.cpp  py_globals.cpp  py_layout.cpp  py_layoutitem.cpp  py_layoutroot.cpp  py_notf.cpp  py_overlayout.cpp  py_padding.cpp  py_painter.cpp  py_property.cpp  py_resourcemanager.cpp  py_signal.cpp  py_size.cpp  py_stacklayout.cpp  py_state.cpp  py_texture2.cpp  py_vector2.cpp  py_widget.cpp  py_window.cpp  pycanvascomponent.cpp  pycomponent.cpp  pyglobal.cpp  pylayoutitem.cpp  pylayoutroot.cpp  pynotf.cpp  pyobject_wrapper.cpp  pypainter.cpp  (+5 more)
src/utils/: binding_accessors.hpp  bit_cast.hpp  debug.hpp  (+13 more)
tests/: CMakeLists.txt  main.cpp  test_circle.cpp  test_event_manager.hpp  test_float.cpp  test_half.cpp  test_matrix3.cpp  test_path.cpp  test_properties.cpp  test_scene.cpp  test_scene.hpp  test_scene_graph.cpp  test_scene_graph.hpp  test_signal.cpp  test_timer.cpp  test_type_name.cpp  test_utils.cpp  test_utils.hpp  utils.hpp
(+1231 files in other folders)
